--- a/skills.html
+++ b/skills.html
@@ -75,20 +75,20 @@
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
       <div id="menuDropdownWrapper">
-        <button id="menuToggle" aria-label="Open menu">
-          &#9776; Menu
-        </button>
-        <ul id="navMenu">
-          <li class="section-menu"><a href="index.html">Home</a></li>
-          <li class="section-menu active"><a href="skills.html">Skills</a></li>
-          <li class="section-menu"><a href="projects.html">Projects</a></li>
-          <li class="section-menu"><a href="experience.html">Job Experience</a></li>
-          <li class="section-menu"><a href="education.html">Education</a></li>
-          <li class="section-menu"><a href="#contact">Contact</a></li>
-        </ul>
+      <button id="menuToggle" aria-label="Open menu">
+        &#9776; Menu
+      </button>
+      <ul id="navMenu">
+        <li class="section-menu"><a href="index.html">Home</a></li>
+        <li class="section-menu active"><a href="skills.html">Skills</a></li>
+        <li class="section-menu"><a href="projects.html">Projects</a></li>
+        <li class="section-menu"><a href="experience.html">Job Experience</a></li>
+        <li class="section-menu"><a href="education.html">Education</a></li>
+        <li class="section-menu"><a href="#contact">Contact</a></li>
+      </ul>
       </div>
-    </nav>
-    <style>
+        </nav>
+        <style>
       nav {
         position: relative;
       }
@@ -100,24 +100,37 @@
         position: relative;
       }
       nav ul#navMenu {
-        transition: max-height 0.35s cubic-bezier(.4,0,.2,1), opacity 0.25s;
+        transition: max-height 0.4s cubic-bezier(.4,0,.2,1), opacity 0.3s cubic-bezier(.4,0,.2,1), transform 0.4s cubic-bezier(.4,0,.2,1);
         overflow: hidden;
-        max-height: 1000px;
+        max-height: none;
         opacity: 1;
+        transform: none;
         padding-top: 0;
+        background: none;
+        color: inherit;
+        display: flex;
+        flex-direction: row;
+        position: static;
+        box-shadow: none;
       }
-      nav ul#navMenu:not(.show) {
-        max-height: 0;
-        opacity: 0;
-        padding-top: 0;
-        pointer-events: none;
+      nav ul#navMenu li.section-menu a {
+        color: inherit;
+        padding: 0.5rem 1.2rem;
+        text-decoration: none;
+        display: block;
+        border-radius: 6px;
+        transition: background 0.3s;
       }
+      nav ul#navMenu li.section-menu a:hover,
+      nav ul#navMenu li.section-menu.active a {
+        background: var(--menu-hover, #e3eafc);
+      }
+      #menuToggle {
+        display: none;
+      }
+      /* Mobile styles */
       @media (max-width: 700px) {
-        #menuDropdownWrapper {
-          width: 100%;
-          position: relative;
-        }
-        nav #menuToggle {
+        #menuToggle {
           display: inline-block;
           background: #1976d2;
           color: #fff;
@@ -127,7 +140,7 @@
           font-size: 1.2rem;
           margin-bottom: 0;
           cursor: pointer;
-          margin-top: 1.2rem; /* Lower the button for mobile */
+          margin-top: 1.2rem;
           width: 100%;
           text-align: left;
           z-index: 1002;
@@ -149,30 +162,17 @@
           padding-top: 3.2rem;
           margin-top: 0;
           width: 100%;
-        }
-        nav ul#navMenu:not(.show) {
-          display: flex;
+          max-height: 0;
+          opacity: 0;
+          transform: translateY(-20px);
+          pointer-events: none;
         }
         nav ul#navMenu.show {
-          animation: dropdownFadeIn 0.35s cubic-bezier(.4,0,.2,1);
+          max-height: 1000px;
+          opacity: 1;
+          transform: translateY(0);
+          pointer-events: auto;
         }
-        @keyframes dropdownFadeIn {
-          from { opacity: 0; transform: translateY(-10px);}
-          to { opacity: 1; transform: translateY(0);}
-        }
-        nav ul#navMenu li.section-menu a {
-          color: inherit;
-          padding: 0.7rem 1.2rem;
-          text-decoration: none;
-          display: block;
-          border-radius: 6px;
-          transition: background 0.4s;
-        }
-        nav ul#navMenu li.section-menu a:hover,
-        nav ul#navMenu li.section-menu.active a {
-          background: var(--menu-hover, #e3eafc);
-        }
-        /* Make button and menu look like one piece when open */
         #menuDropdownWrapper.open #menuToggle {
           border-bottom-left-radius: 0;
           border-bottom-right-radius: 0;
@@ -180,28 +180,8 @@
         #menuDropdownWrapper:not(.open) #menuToggle {
           border-radius: 6px;
         }
-      }
-      @media (min-width: 701px) {
-        nav #menuToggle {
-          display: none !important;
-        }
-        nav ul#navMenu {
-          display: flex !important;
-          flex-direction: row;
-          position: static;
-          box-shadow: none;
-          background: none;
-          color: inherit;
-          max-height: none !important;
-          opacity: 1 !important;
-          padding-top: 0 !important;
-        }
         nav ul#navMenu li.section-menu a {
-          padding: 0.5rem 1.2rem;
-        }
-        #menuDropdownWrapper {
-          flex-direction: row;
-          align-items: center;
+          padding: 0.7rem 1.2rem;
         }
       }
       /* Light/Dark mode support */
@@ -211,6 +191,10 @@
           --menu-color: #f3f6fa;
           --menu-hover: #2d3642;
         }
+        #menuToggle {
+          background: #23272f;
+          color: #f3f6fa;
+        }
       }
       @media (prefers-color-scheme: light) {
         nav ul#navMenu {
@@ -218,32 +202,50 @@
           --menu-color: #222;
           --menu-hover: #e3eafc;
         }
+        #menuToggle {
+          background: #1976d2;
+          color: #fff;
+        }
       }
-    </style>
-    <script>
+        </style>
+        <script>
       document.addEventListener('DOMContentLoaded', function() {
         var menuToggle = document.getElementById('menuToggle');
         var navMenu = document.getElementById('navMenu');
         var wrapper = document.getElementById('menuDropdownWrapper');
+        function isMobile() {
+          return window.innerWidth <= 700;
+        }
+        function closeMenu() {
+          navMenu.classList.remove('show');
+          wrapper.classList.remove('open');
+        }
         if (menuToggle && navMenu && wrapper) {
           menuToggle.addEventListener('click', function(e) {
-            navMenu.classList.toggle('show');
-            wrapper.classList.toggle('open', navMenu.classList.contains('show'));
+        if (isMobile()) {
+          navMenu.classList.toggle('show');
+          wrapper.classList.toggle('open', navMenu.classList.contains('show'));
+        }
           });
-          // Hide menu when clicking outside
+          // Hide menu when clicking outside (only on mobile)
           document.addEventListener('click', function(e) {
-            if (
-              window.innerWidth <= 700 &&
-              !menuToggle.contains(e.target) &&
-              !navMenu.contains(e.target)
-            ) {
-              navMenu.classList.remove('show');
-              wrapper.classList.remove('open');
-            }
+        if (
+          isMobile() &&
+          !menuToggle.contains(e.target) &&
+          !navMenu.contains(e.target)
+        ) {
+          closeMenu();
+        }
+          });
+          // Close menu on resize to desktop
+          window.addEventListener('resize', function() {
+        if (!isMobile()) {
+          closeMenu();
+        }
           });
         }
       });
-    </script>
+        </script>
   </header>
 
   <section id="skills">
