--- a/skills.html
+++ b/skills.html
@@ -100,7 +100,10 @@
         position: relative;
       }
       nav ul#navMenu {
-        transition: max-height 0.4s cubic-bezier(.4,0,.2,1), opacity 0.3s cubic-bezier(.4,0,.2,1), transform 0.4s cubic-bezier(.4,0,.2,1);
+        transition:
+          max-height 0.45s cubic-bezier(.4,0,.2,1),
+          opacity 0.35s cubic-bezier(.4,0,.2,1),
+          transform 0.45s cubic-bezier(.4,0,.2,1);
         overflow: hidden;
         max-height: none;
         opacity: 1;
@@ -164,14 +167,19 @@
           width: 100%;
           max-height: 0;
           opacity: 0;
-          transform: translateY(-20px);
+          transform: translateY(-32px) scaleY(0.98);
           pointer-events: none;
+          will-change: max-height, opacity, transform;
         }
         nav ul#navMenu.show {
           max-height: 1000px;
           opacity: 1;
-          transform: translateY(0);
+          transform: translateY(0) scaleY(1);
           pointer-events: auto;
+          transition:
+        max-height 0.45s cubic-bezier(.4,0,.2,1),
+        opacity 0.35s cubic-bezier(.4,0,.2,1),
+        transform 0.45s cubic-bezier(.4,0,.2,1);
         }
         #menuDropdownWrapper.open #menuToggle {
           border-bottom-left-radius: 0;
@@ -243,6 +251,23 @@
           closeMenu();
         }
           });
+        }
+        // Improve animation: force reflow before adding .show for smooth transition
+        if (menuToggle && navMenu) {
+          menuToggle.addEventListener('click', function(e) {
+        if (isMobile() && !navMenu.classList.contains('show')) {
+          navMenu.style.transition = 'none';
+          navMenu.classList.add('show');
+          void navMenu.offsetWidth; // force reflow
+          navMenu.classList.remove('show');
+          navMenu.style.transition = '';
+          setTimeout(function() {
+            navMenu.classList.add('show');
+          }, 10);
+          wrapper.classList.toggle('open', true);
+          e.stopImmediatePropagation();
+        }
+          }, true);
         }
       });
         </script>
