--- a/skills.html
+++ b/skills.html
@@ -181,16 +181,6 @@
         opacity 0.35s cubic-bezier(.4,0,.2,1),
         transform 0.5s cubic-bezier(.4,0,.2,1);
         }
-        nav ul#navMenu.hiding {
-          max-height: 0;
-          opacity: 0;
-          transform: translateY(-16px) scaleY(0.95);
-          pointer-events: none;
-          transition:
-        max-height 0.5s cubic-bezier(.4,0,.2,1),
-        opacity 0.35s cubic-bezier(.4,0,.2,1),
-        transform 0.5s cubic-bezier(.4,0,.2,1);
-        }
         #menuDropdownWrapper.open #menuToggle {
           border-bottom-left-radius: 0;
           border-bottom-right-radius: 0;
@@ -235,19 +225,8 @@
           return window.innerWidth <= 700;
         }
         function closeMenu() {
-          if (navMenu.classList.contains('show')) {
-        navMenu.classList.remove('show');
-        navMenu.classList.add('hiding');
-        wrapper.classList.remove('open');
-        setTimeout(function() {
-          navMenu.classList.remove('hiding');
-          navMenu.style.display = '';
-        }, 500);
-          } else {
-        navMenu.classList.remove('hiding');
-        navMenu.style.display = '';
-        wrapper.classList.remove('open');
-          }
+          navMenu.classList.remove('show');
+          wrapper.classList.remove('open');
         }
         if (menuToggle && navMenu && wrapper) {
           menuToggle.addEventListener('click', function(e) {
@@ -259,8 +238,14 @@
             navMenu.classList.add('show');
             wrapper.classList.add('open');
           } else {
-            // Close: remove .show, add .hiding for animation, then hide after transition
-            closeMenu();
+            // Close: remove .show, then after transition, hide display
+            navMenu.classList.remove('show');
+            wrapper.classList.remove('open');
+            setTimeout(function() {
+          if (!navMenu.classList.contains('show')) {
+            navMenu.style.display = '';
+          }
+            }, 500);
           }
           e.stopPropagation();
         }
@@ -273,17 +258,16 @@
           !navMenu.contains(e.target)
         ) {
           closeMenu();
+          navMenu.style.display = '';
         }
           });
           // Close menu on resize to desktop
           window.addEventListener('resize', function() {
         if (!isMobile()) {
           closeMenu();
+          navMenu.style.display = '';
         }
           });
-        }
-      });
-        </script>
         }
       });
         </script>
