--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills - Raúl Rodríguez Ruiz</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="stylemenu.css" />
   <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js"></script>
   <script src="translate.js" defer></script>
@@ -88,189 +89,7 @@
       </ul>
       </div>
         </nav>
-        <style>
-      nav {
-        position: relative;
-      }
-      #menuDropdownWrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
-        position: relative;
-      }
-      nav ul#navMenu {
-        transition:
-          max-height 0.5s cubic-bezier(.4,0,.2,1),
-          opacity 0.35s cubic-bezier(.4,0,.2,1),
-          transform 0.5s cubic-bezier(.4,0,.2,1);
-        overflow: hidden;
-        max-height: none;
-        opacity: 1;
-        transform: none;
-        padding-top: 0;
-        background: none;
-        color: inherit;
-        display: flex;
-        flex-direction: row;
-        position: static;
-        box-shadow: none;
-      }
-      nav ul#navMenu li.section-menu a {
-        color: inherit;
-        padding: 0.5rem 1.2rem;
-        text-decoration: none;
-        display: block;
-        border-radius: 6px;
-        transition: background 0.3s;
-      }
-      nav ul#navMenu li.section-menu a:hover,
-      nav ul#navMenu li.section-menu.active a {
-        background: var(--menu-hover, #e3eafc);
-      }
-      #menuToggle {
-        display: none;
-      }
-      /* Mobile styles */
-      @media (max-width: 700px) {
-        #menuToggle {
-          display: inline-block;
-          background: #1976d2;
-          color: #fff;
-          border: none;
-          padding: 0.5rem 1rem;
-          border-radius: 6px;
-          font-size: 1.2rem;
-          margin-bottom: 0;
-          cursor: pointer;
-          margin-top: 1.2rem;
-          width: 100%;
-          text-align: left;
-          z-index: 1002;
-          position: relative;
-          transition: border-radius 0.3s;
-        }
-        nav ul#navMenu {
-          display: flex;
-          flex-direction: column;
-          background: var(--menu-bg, #fff);
-          color: var(--menu-color, #222);
-          position: absolute;
-          top: 100%;
-          left: 0;
-          right: 0;
-          box-shadow: 0 8px 24px rgba(0,0,0,0.13);
-          border-radius: 0 0 16px 16px;
-          z-index: 1001;
-          padding-top: 0.5rem;
-          margin-top: 0;
-          width: 100%;
-          max-height: 0;
-          opacity: 0;
-          transform: translateY(-16px) scaleY(0.95);
-          pointer-events: none;
-          will-change: max-height, opacity, transform;
-        }
-        nav ul#navMenu.show {
-          max-height: 600px;
-          opacity: 1;
-          transform: translateY(0) scaleY(1);
-          pointer-events: auto;
-          transition:
-        max-height 0.5s cubic-bezier(.4,0,.2,1),
-        opacity 0.35s cubic-bezier(.4,0,.2,1),
-        transform 0.5s cubic-bezier(.4,0,.2,1);
-        }
-        #menuDropdownWrapper.open #menuToggle {
-          border-bottom-left-radius: 0;
-          border-bottom-right-radius: 0;
-        }
-        #menuDropdownWrapper:not(.open) #menuToggle {
-          border-radius: 6px;
-        }
-        nav ul#navMenu li.section-menu a {
-          padding: 0.7rem 1.2rem;
-        }
-      }
-      /* Light/Dark mode support */
-      @media (prefers-color-scheme: dark) {
-        nav ul#navMenu {
-          --menu-bg: #23272f;
-          --menu-color: #f3f6fa;
-          --menu-hover: #2d3642;
-        }
-        #menuToggle {
-          background: #23272f;
-          color: #f3f6fa;
-        }
-      }
-      @media (prefers-color-scheme: light) {
-        nav ul#navMenu {
-          --menu-bg: #fff;
-          --menu-color: #222;
-          --menu-hover: #e3eafc;
-        }
-        #menuToggle {
-          background: #1976d2;
-          color: #fff;
-        }
-      }
-        </style>
-        <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        var menuToggle = document.getElementById('menuToggle');
-        var navMenu = document.getElementById('navMenu');
-        var wrapper = document.getElementById('menuDropdownWrapper');
-        function isMobile() {
-          return window.innerWidth <= 700;
-        }
-        function closeMenu() {
-          navMenu.classList.remove('show');
-          wrapper.classList.remove('open');
-        }
-        if (menuToggle && navMenu && wrapper) {
-          menuToggle.addEventListener('click', function(e) {
-        if (isMobile()) {
-          if (!navMenu.classList.contains('show')) {
-            // Open: set display, force reflow, then add .show for animation
-            navMenu.style.display = 'flex';
-            void navMenu.offsetHeight;
-            navMenu.classList.add('show');
-            wrapper.classList.add('open');
-          } else {
-            // Close: remove .show, then after transition, hide display
-            navMenu.classList.remove('show');
-            wrapper.classList.remove('open');
-            setTimeout(function() {
-          if (!navMenu.classList.contains('show')) {
-            navMenu.style.display = '';
-          }
-            }, 500);
-          }
-          e.stopPropagation();
-        }
-          });
-          // Hide menu when clicking outside (only on mobile)
-          document.addEventListener('click', function(e) {
-        if (
-          isMobile() &&
-          !menuToggle.contains(e.target) &&
-          !navMenu.contains(e.target)
-        ) {
-          closeMenu();
-          navMenu.style.display = '';
-        }
-          });
-          // Close menu on resize to desktop
-          window.addEventListener('resize', function() {
-        if (!isMobile()) {
-          closeMenu();
-          navMenu.style.display = '';
-        }
-          });
-        }
-      });
-        </script>
+        
   </header>
 
   <section id="skills">
