--- a/skills.html
+++ b/skills.html
@@ -103,167 +103,175 @@
  
     
   <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-business-analyst-64.png" alt="icon" class="skill-icon" />
-        <span>Business Analyst</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Identify business needs, gather and document requirements, and recommend solutions to improve processes and achieve organizational goal.</div>
+    <div class="skill-title">
+      <img src="icons/icons8-business-analyst-64.png" alt="icon" class="skill-icon" />
+      <span>Business Analyst</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Identify business needs, gather and document requirements, and recommend solutions to improve processes and achieve organizational goal.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-project-manager-64.png" alt="icon" class="skill-icon" />
-        <span>Project-Management</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Plan, execute, and oversee projects, managing scope, timelines, resources, and deliverables to ensure successful completion.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-project-manager-64.png" alt="icon" class="skill-icon" />
+      <span>Project-Management</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Plan, execute, and oversee projects, managing scope, timelines, resources, and deliverables to ensure successful completion.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-web-development-90.png" alt="icon" class="skill-icon" />
-        <span>Web Development</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Develop and maintain websites using HTML, CSS, and JavaScript, focusing on responsive design and user experience.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-web-development-90.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Web Development</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Develop and maintain websites using HTML, CSS, and JavaScript, focusing on responsive design and user experience.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-agile-development-64.png" alt="icon" class="skill-icon" />
-        <span>Agile Methodologies</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Apply Agile principles to foster collaboration, adaptability, and continuous improvement within project teams.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-agile-development-64.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Agile Methodologies</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Apply Agile principles to foster collaboration, adaptability, and continuous improvement within project teams.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-sprint-iteration-100.png" alt="icon" class="skill-icon" />
-        <span>Scrum Methodologies</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Facilitate Scrum ceremonies, manage sprints, and support teams in delivering incremental value efficiently.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-sprint-iteration-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Scrum Methodologies</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Facilitate Scrum ceremonies, manage sprints, and support teams in delivering incremental value efficiently.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-waterfall-100.png" alt="icon" class="skill-icon" />
-        <span>Waterfall Methodologies</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Implement structured, sequential project management processes for predictable and well-documented outcomes.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-waterfall-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Waterfall Methodologies</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Implement structured, sequential project management processes for predictable and well-documented outcomes.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-process-100.png" alt="icon" class="skill-icon" />
-        <span>Process Modeling</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Design and visualize business processes using diagrams and modeling tools to optimize workflows and communication.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-process-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Process Modeling</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Design and visualize business processes using diagrams and modeling tools to optimize workflows and communication.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-documentation-100.png" alt="icon" class="skill-icon" />
-        <span>Documentation</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Create clear, concise documentation including user stories, requirements, manuals, and process guides for diverse audiences.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-documentation-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Documentation</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Create clear, concise documentation including user stories, requirements, manuals, and process guides for diverse audiences.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-stakeholder-100.png" alt="icon" class="skill-icon" />
-        <span>Stakeholder Management</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Engage stakeholders, gather feedback, manage expectations, and ensure alignment throughout project lifecycles.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-stakeholder-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Stakeholder Management</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Engage stakeholders, gather feedback, manage expectations, and ensure alignment throughout project lifecycles.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-javascript-100.png" alt="icon" class="skill-icon" />
-        <span>JavaScript</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Enhance web pages with interactivity and dynamic content using JavaScript for client-side development.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-javascript-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>JavaScript</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Enhance web pages with interactivity and dynamic content using JavaScript for client-side development.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-html-100.png" alt="icon" class="skill-icon" />
-        <span>HTML</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Structure web content semantically for accessibility, SEO, and maintainability across devices.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-html-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>HTML</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Structure web content semantically for accessibility, SEO, and maintainability across devices.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-css-100.png" alt="icon" class="skill-icon" />
-        <span>CSS</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Style and layout web pages for visual appeal, responsiveness, and cross-browser compatibility.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-css-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>CSS</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Style and layout web pages for visual appeal, responsiveness, and cross-browser compatibility.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-critical-thinking-100.png" alt="icon" class="skill-icon" />
-        <span>Critical Thinking</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Analyze problems logically, evaluate solutions, and make informed decisions to drive business success.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-critical-thinking-100.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Critical Thinking</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Analyze problems logically, evaluate solutions, and make informed decisions to drive business success.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-jira-96.png" alt="icon" class="skill-icon" />
-        <span>Jira</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Track tasks, manage workflows, and support Agile project management using Jira software.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-jira-96.png" alt="icon" class="skill-icon" />
+      <span>Jira</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Track tasks, manage workflows, and support Agile project management using Jira software.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-azure-devops-96.png" alt="icon" class="skill-icon" />
-        <span>DevOps</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Coordinate development and operations, automate deployments, and manage releases using DevOps tools.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-azure-devops-96.png" alt="icon" class="skill-icon" />
+      <span>DevOps</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Coordinate development and operations, automate deployments, and manage releases using DevOps tools.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-chart-64.png" alt="icon" class="skill-icon" />
-        <span>Lucidchart</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Create diagrams and flowcharts to visualize systems, processes, and organizational structures.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-chart-64.png" alt="icon" class="skill-icon skill-icon-darkmode" />
+      <span>Lucidchart</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Create diagrams and flowcharts to visualize systems, processes, and organizational structures.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-flow-chart-96.png" alt="icon" class="skill-icon" />
-        <span>Draw.io</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Design process maps, technical diagrams, and visual documentation using Draw.io for effective communication.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-flow-chart-96.png" alt="icon" class="skill-icon" />
+      <span>Draw.io</span>
+      <span class="arrow">&#9654;</span>
     </div>
+    <div class="skill-description">Design process maps, technical diagrams, and visual documentation using Draw.io for effective communication.</div>
+  </div>
 
-    <div class="skill skill-item" onclick="toggleDescription(this)">
-      <div class="skill-title">
-        <img src="icons/icons8-data-analysis-100.png" alt="icon" class="skill-icon" />
-        <span>Data Analysis</span>
-        <span class="arrow">&#9654;</span>
-      </div>
-      <div class="skill-description">Collect, interpret, and visualize data to uncover insights, support decision-making, and drive business improvements.</div>
+  <div class="skill skill-item" onclick="toggleDescription(this)">
+    <div class="skill-title">
+      <img src="icons/icons8-data-analysis-100.png" alt="icon" class="skill-icon" />
+      <span>Data Analysis</span>
+      <span class="arrow">&#9654;</span>
     </div>
-        </div>
+    <div class="skill-description">Collect, interpret, and visualize data to uncover insights, support decision-making, and drive business improvements.</div>
+  </div>
+  </div>
+
+  <style>
+    @media (prefers-color-scheme: dark) {
+      .skill-icon-darkmode {
+        filter: brightness(0) invert(1) !important;
+      }
+    }
+  </style>
     </section>
 <footer>
   <section id="contact" class="contact-section">
