--- a/education.html
+++ b/education.html
@@ -73,15 +73,20 @@
     <header>
         <h1>Raúl Rodríguez Ruiz</h1>
           <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
-        <nav>
-            <ul>
-                <li class="section-menu"><a href="index.html">Home</a></li>
-                <li class="section-menu"><a href="skills.html">Skills</a></li>
-                <li class="section-menu"><a href="projects.html">Projects</a></li>
-                <li class="section-menu"><a href="experience.html">Job Experience</a></li>
-                <li class="section-menu active"><a href="education.html">Education</a></li>
-                <li class="section-menu"><a href="#contact">Contact</a></li>
-            </ul>
+    <nav>
+      <div id="menuDropdownWrapper">
+      <button id="menuToggle" aria-label="Open menu">
+        &#9776; Menu
+      </button>
+      <ul id="navMenu">
+        <li class="section-menu"><a href="index.html">Home</a></li>
+        <li class="section-menu"><a href="skills.html">Skills</a></li>
+        <li class="section-menu"><a href="projects.html">Projects</a></li>
+        <li class="section-menu"><a href="experience.html">Job Experience</a></li>
+        <li class="section-menu active"><a href="education.html">Education</a></li>
+        <li class="section-menu"><a href="#contact">Contact</a></li>
+      </ul>
+      </div>
         </nav>
     </header>
     <section id="education">
