--- a/experience.html
+++ b/experience.html
@@ -74,7 +74,11 @@
     <h1>Raúl Rodríguez Ruiz</h1>
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
-      <ul>
+      <div id="menuDropdownWrapper">
+      <button id="menuToggle" aria-label="Open menu">
+        &#9776; Menu
+      </button>
+      <ul id="navMenu">
         <li class="section-menu"><a href="index.html">Home</a></li>
         <li class="section-menu"><a href="skills.html">Skills</a></li>
         <li class="section-menu"><a href="projects.html">Projects</a></li>
@@ -82,7 +86,8 @@
         <li class="section-menu"><a href="education.html">Education</a></li>
         <li class="section-menu"><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+      </div>
+        </nav>
   </header>
 
   <section id="experience">
